test/fail/refutable-import.mo
import { why = 42 } = "nat-module";

//SKIP run
//SKIP run-ir
//SKIP run-low
//SKIP comp
